style: posts now have fixed width && style: little change to spacing between post header and content

--- a/Feed/style.css
+++ b/Feed/style.css
@@ -51,12 +51,13 @@ body{
 
 .card {
     height: fit-content;
+    width: 100%;
     background-color: var(--cor-primaria2);
     padding: 1rem;
     border-radius: 2rem;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: .25rem;
 }
 
 .card a {
@@ -107,6 +108,10 @@ body{
     width: 2rem;
     height: 2rem;
 
+}
+
+.card .content p {
+    margin: 0 0 1rem 0;
 }
 
 .modal {
